# libm

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
crates/hexf-cli/: Cargo.toml
crates/hexf-cli/src/: main.rs
crates/libm-c-abi/: Cargo.toml
crates/libm-c-abi/example/: Makefile  simple.c
crates/libm-c-abi/src/: lib.rs  lib_f32.rs  lib_f64.rs  lib_fenv.rs  lib_long_double.rs
crates/libm-c-abi/test-scripts/: test-musl.sh  test-openlibm.sh
libm/: Cargo.toml
libm/example/: Makefile  simple.c
libm/example/openlibm-test/: Makefile
libm/src/: lib.rs  lib_f32.rs  lib_f64.rs  lib_fenv.rs  lib_long_double.rs
libm/tests/: test-musl.sh  test-openlibm.sh  test.sh
libm_crate/: Cargo.toml
libm_crate/examples/: no-panic.rs
libm_crate/src/: lib.rs
libm_internals/: Cargo.toml
libm_internals/src/: acosh.rs  asinh.rs  atan.rs  atanh.rs  erf.rs  ilogb.rs  j0.rs  j1.rs  jn.rs  k_lgamma_r.rs  lgamma.rs  lib.rs  math.rs  nextafter.rs  rint.rs  sincos.rs
libm_internals/src/math/: musl.rs
libm_internals/src/math/musl/: k_lgamma_r.rs  nextafter.rs  rint.rs
newlib-generator/: Cargo.toml
newlib-generator/src/: macros.rs
src/: lib.rs
src/math/: acos.rs  asin.rs  asinf.rs  atan.rs  atan2.rs  atanf.rs  cbrt.rs  cbrtf.rs  ceilf.rs  cos.rs  cosf.rs  exp.rs  exp2.rs  exp2f.rs  expm1.rs  expm1f.rs  expo2.rs  fdim.rs  floorf.rs  fma.rs  fmaf.rs  hypot.rs  hypotf.rs  j0.rs  j0f.rs  j1.rs  j1f.rs  jn.rs  jnf.rs  k_expo2.rs  k_tan.rs  log.rs  log10.rs  log10f.rs  log1p.rs  log1pf.rs  log2.rs  log2f.rs  mod.rs  nextafter.rs  (+15 more)
