[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["no-std"]
description = "libm in pure Rust"
documentation = "https://docs.rs/libm"
keywords = ["libm", "math"]
license = "MIT OR Apache-2.0"
name = "libm"
repository = "https://github.com/rust-lang-nursery/libm"
version = "0.2.0"
exclude = ["/ci/*"]
edition = "2018"

[features]
default = ['stable', 'musl']
newlib = ['libm_internals/newlib']
musl = ['libm_internals/musl']
stable = ['libm_internals/stable']
# only used to run our test suite
checked = ['libm_internals/checked']

[dependencies]
libm_internals = {path="../libm_internals/"}

[dev-dependencies]
libc = { version = "0.2", default-features = false }
